removes ALL-MODULE-PATH flag on JavaDoc